--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -48,7 +48,7 @@ In-person lectures and discussions will occur synchronously during their schedul
 
 ### Recommended Textbooks
 
-This course uses the following two textbooks - which is free to access - for optional reading and practice.
+This course uses the following textbook - which is free to access - for optional reading and practice.
 
 ```{r echo=FALSE}
 refs <- bibtex::read.bib("references.bib")
@@ -56,8 +56,9 @@ refs <- bibtex::read.bib("references.bib")
 
 *Click on the link to access the resources.*
 
-  * `r capture.output(print(refs["speegle2021probability"]))`
   * `r capture.output(print(refs["blitzstein2019introduction"]))`
+
+*Amendment 6:* The recommended textbooks are reduced from two to one.
 
 <br>
 
