--- a/topics.Rmd
+++ b/topics.Rmd
@@ -56,13 +56,13 @@ create_footer()
 | **11** | Tu 11/5 | *Continued from 10/31* | - | - | - |
 |  | Th 11/7 | *Cancelled* | - | Assigned: Homework 3 | - |
 | **12** | Tu 11/12 | Moment Generating Functions | Determine the Moments | - |  Sect. 6.3-6.5 [B] |
-|  | Th 11/14 | Joint and Marginal Distributions \& Conditional Distributions | Compute the Marginals | - | Sect. 7.1-7.3 [B] |
-| **13** | Tu 11/19 | Transformations | TBA | - | Sect. 8.1-8.2 [B] |
-|  | Th 11/21 | _Review_ | Exam 2 Examples | - | Exam 2 Topics |
-| **14** | Tu 11/26 | **Exam 2** | TBA | - | - |
+|  | Th 11/14 | Joint and Marginal Distributions | Compute the Marginals | - | Sect. 7.1-7.2 [B] |
+| **13** | Tu 11/19 | *Continued from 11/14* | - | - | - |
+|  | Th 11/21 | Covariance and Correlation | Determine the Covariance and Correlation | - | Sect. 7.3 [B] |
+| **14** | Tu 11/26 | _Cancelled_ | - | - | - |
 |  | Th 11/28 | _Thanksgiving Vacation_ | - | - | - |
-| **15** | Tu 12/3 | Markov Chains | TBA | - | Sect. 11.1-11.4 [B] |
-|  | Th 12/5 | Markov Chain Monte Carlo | TBA | - | Sect. 12.1-12.2 [B] |
+| **15** | Tu 12/3 | Convolutions & Markov Chains | TBA | - | Sect. 8.2 \& Sect. 11.1-11.4 [B] |
+|  | Th 12/5 | _Review_ | Exam 2 Examples | - | Exam 2 Topics |
 | **16** | Tu 12/11 | **Final Exam Section A** | - | - | - |
 
 <br>
